[FEATURE] Basic german doku

--- a/Resources/Private/Templates/de_DE/01_project.rst.twig
+++ b/Resources/Private/Templates/de_DE/01_project.rst.twig
@@ -4,5 +4,7 @@
 Projektbeschreibung
 ===================
 
-Kurze Darstellung des Projektgegenstandes (Thema, Ziele, Domänen), der einge-setzten Software (CMS, Datenbanken,
+Kurze Darstellung des Projektgegenstandes (Thema, Ziele, Domänen), der eingesetzten Software (CMS, Datenbanken,
 Komponenten) sowie Erläuterungen von Besonderheiten.
+
+{{ settings.description }}
