--- a/Resources/Private/Templates/de_DE/02_frameworks.rst.twig
+++ b/Resources/Private/Templates/de_DE/02_frameworks.rst.twig
@@ -12,6 +12,8 @@ Als CMS kommt TYPO3 in der Version X zum Einsatz, Quelle: https://typo3.org/down
 Frontend
 ========
 
+.. todo: Fill these out manually
+
 Bootstrap
 ---------
 
@@ -36,6 +38,8 @@ Angebundene APIs
 
 OpenWeather-API
 ---------------
+
+.. todo: Fill these out manually
 
 Die OpenWeather -API wird direkt im Frontend über das Template angebunden und dient zur Anzeige der aktuellen Wetterdaten.
 Zur Nutzung der API muss ein Key generiert werden. Eine Anleitung dazu befindet sich hier:
