--- a/Resources/Private/Templates/de_DE/05_apis.rst.twig
+++ b/Resources/Private/Templates/de_DE/05_apis.rst.twig
@@ -6,6 +6,9 @@
 Schnittstellen (APIs)
 =====================
 
+
+.. todo: Fill these out manually
+
 get downloads
 =============
 Liefert die gesamte Downloads-Liste als json
