--- a/Resources/Private/Templates/de_DE/07_cronjobs.rst.twig
+++ b/Resources/Private/Templates/de_DE/07_cronjobs.rst.twig
@@ -3,3 +3,5 @@
 ==================================
 Automatisierte Prozesse (Cronjobs)
 ==================================
+
+..  include:: _includes/_scheduler.rst.txt
