--- a/Resources/Private/Templates/de_DE/08_serverpaths.rst.twig
+++ b/Resources/Private/Templates/de_DE/08_serverpaths.rst.twig
@@ -6,6 +6,9 @@ Verzeichnisstruktur
 
 Die Verzeichnisstruktur des webroots sowie des Themes (sofern nicht in Erweiterung ausgelagert) muss dargestellt werden.
 
+
+.. todo: Fill these out manually
+
 Webroot / fileadmin
 ===================
 
