--- a/Resources/Private/Templates/de_DE/Includes.rst.txt.twig
+++ b/Resources/Private/Templates/de_DE/Includes.rst.txt.twig
@@ -11,4 +11,4 @@
 ..  documentblock::
     :identifier: footer
 
-    © Copyright since 2023 by the WebCommerce GmbH
+    © Copyright since {{ global.year }} by the {{ settings.company }}
