--- a/Resources/Private/Templates/de_DE/Index.rst.twig
+++ b/Resources/Private/Templates/de_DE/Index.rst.twig
@@ -10,16 +10,16 @@ Beispielprojekt example.de
 ==========================
 
 :Datum:
-    14.07.2023
+    {{ global.date }}
 
 :Version:
-    3.1
+    {{ settings.version }}
 
 :Dienstleister:
-    Webcommerce GmbH
+    {{ settings.company }}
 
 :Autor:
-    Lina Wolf
+    {{ settings.author }}
 
 :Zuletzt gerendert:
     |today|
