--- a/Resources/Private/Templates/de_DE/10_other.rst.twig
+++ b/Resources/Private/Templates/de_DE/10_other.rst.twig
@@ -8,6 +8,8 @@ Alle weiteren Anpassungen am System, z.B. Modifikationen in Core-Dateien müssen
 Hier ist es nötig, den genauen Grund der Anpassung im Core zu nennen. Sollte es zukünftig bessere
 Lösungsmöglichkeiten geben, so müssen auch diese dokumentiert werden.
 
+.. todo: Fill these out manually
+
 Beispiel
 ========
 
