[TASK] Improve templates

--- a/Resources/Private/Templates/de_DE/04_extensions.rst.twig
+++ b/Resources/Private/Templates/de_DE/04_extensions.rst.twig
@@ -13,12 +13,7 @@ Mindestens benötigt werden: Name, Version, Einsatzzweck, Quelle, Hinweise zur K
 
 ..  include:: _includes/_sys_extensions.rst.txt
 
-Erweiterungsmodule von Drittanbietern
-=====================================
+Erweiterungsmodule von Drittanbietern / Eigenentwicklungen
+==========================================================
 
-..  include:: _includes/_trd_party_extensions.rst.txt
-
-Eigenentwicklungen
-==================
-
-..  include:: _includes/_local_extensions.rst.txt
+..  include:: _includes/_extensions.rst.txt
