--- a/Resources/Private/Templates/de_DE/06_userrights.rst.twig
+++ b/Resources/Private/Templates/de_DE/06_userrights.rst.twig
@@ -4,4 +4,9 @@
 Benutzer / Benutzergruppen (Berechtigungen)
 ===========================================
 
-..  include:: _includes/_user_groups.rst.txt
+..  include:: _includes/_beUsergroups.rst.txt
+
+Benutzergruppen Berechtigungen für Tabellen
+===========================================
+
+..  include:: _includes/_beUsergroupTables.rst.txt
